# Battle-Score-Aggregator

./: .gitignore  README.md  pyproject.toml
bsa/: __main__.py  main.py
bsa/dash/: conf.py  core.py  filters.py  routes.py
bsa/orm/: judge.py  team.py
docs/: JUDGING.md
src/: main.py
src/dash/: conf.py  core.py  filters.py  routes.py
src/orm/: judge.py  team.py
src/www/static/css/: admin.css  export.css  index.css  judge.css  login.css  total.css
src/www/static/js/: admin.js  export.js  judge.js  total.js
src/www/templates/: admin.html  export.html  index.html  judge.html  login.html  total.html
www/static/css/: total.css
www/templates/: export.html  judge.html
