[tool.poetry]
name = "battle-score-aggregator"
version = "0.1.0"
description = ""
authors = ["Taira <tylervitale@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sanic = "^21.12.1"
sanic-session = "^0.8.0"
sanic-jinja2 = "^2022.1.13"
Jinja2 = "^3.0.3"
coloredlogs = "^15.0.1"
toml = "^0.10.2"
marshmallow = "^3.14.1"
passlib = "^1.7.4"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
